concord_macros/tests/trybuild/fail/codegen_contract/mismatched_macro_core_marker.rs
struct ForeignGeneratedContract;

const _: ForeignGeneratedContract = concord_core::__private::GENERATED_CONTRACT;

fn main() {}
