concord_macros/tests/trybuild/fail/codegen_contract/mismatched_macro_core_marker.stderr
error[E0308]: mismatched types
 --> tests/trybuild/fail/codegen_contract/mismatched_macro_core_marker.rs:3:37
  |
3 | const _: ForeignGeneratedContract = concord_core::__private::GENERATED_CONTRACT;
  |          ------------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `ForeignGeneratedContract`, found `ReqwestNativeGeneratedContract`
  |          |
  |          expected because of the type of the constant
